# rg-project

app/: CMakeLists.txt  config.json
app/include/: MainController.hpp  MyApp.hpp
app/resources/models/corgi/Corgi-2018/: Corgi-2018-Corona.max  Corgi-2018-VRay.max  index.txt
app/resources/models/corgi/Corgi-2018/export/: Corgi-2018-3ds.3ds  Corgi-2018-Corona-fbx.fbx  Corgi-2018-VRay-fbx.fbx  Corgi-2018-obj.mtl
app/resources/models/corgi/Corgi-2018/matlib/: Corgi-2018-Corona-mat.mat  Corgi-2018-VRay-mat.mat
app/resources/shaders/: basic.glsl
app/src/: Main.cpp  MainController.cpp  MyApp.cpp
